--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Kritika Home Food production ready build",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "dev": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf dist",
+    "build": "npm run clean && webpack --config webpack.config.js",
+    "dev": "webpack --watch"
   },
   "keywords": [],
   "author": "",
